Finished first draft

--- a/css/main.sass
+++ b/css/main.sass
@@ -59,20 +59,12 @@ body
     background-repeat: no-repeat
 
 .teaserimage
-  height: 450px
-  position: relative
+  text-align: center
   overflow: hidden
   background-color: #000
   .teaserimage-image
-    background-size: cover
-    background-position: center
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    z-index: 1
-    text-indent: -9999px
+    max-height: 400px
+    max-width: 100%
 
 .blog-header
   width: 100%
