Tweak the footer image on pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,10 +44,7 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover }})"{% endif %}>
-        Image
-      </div>
-      <div class="inner">
+      <div class="inner" style="background-image: url({{ site.cover }})">
         <h1 class="blog-title">{{ site.title }}</h1>
         <h2 class="blog-description">{{ site.description }}</h2>
         <a href="/" class="btn">Back to Overview</a>
