--- a/css/main.sass
+++ b/css/main.sass
@@ -521,17 +521,12 @@ body
   width: 100%
   position: relative
   overflow: hidden
-  .background-closer-image
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    text-indent: -9999px
-    background-size: cover
+  background-color: #000
+  .inner
+    background-size: contain
     background-repeat: no-repeat
     background-position: center
-  .inner
+    background-color: #000
     width: 100%
     position: relative
     z-index: 99
