--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,7 +46,7 @@
     <div class="bottom-closer">
       <div class="inner" style="background-image: url({{ site.cover }})">
         <h1 class="blog-title">{{ site.title }}</h1>
-        <h2 class="blog-description">{{ site.description }}</h2>
+        <h2 class="blog-description">{{ site.subtitle }}</h2>
         <a href="/" class="btn">Back to Overview</a>
       </div>
     </div>
