--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -93,7 +93,7 @@
       </div>
       <div class="inner">
         <h1 class="blog-title">{{ site.title }}</h1>
-        <h2 class="blog-description">{{ site.description }}</h2>
+        <h2 class="blog-description">{{ site.subtitle }}</h2>
         <a href="/" class="btn">Back to Overview</a>
       </div>
     </div>
