Fix keywords meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.meta.title }}{% endif %}</title>
   <meta name="description" content="{% if site.meta.description %}{{ site.meta.description }}{% else %}{{ site.subtitle }}{% endif %}" />
-  <meta keywords="{{ site.meta.keywords }}" />
+  <meta name="keywords" content="{{ site.meta.keywords }}" />
 
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
