--- a/css/main.sass
+++ b/css/main.sass
@@ -309,14 +309,18 @@ body
     .post-meta
       font-family: $font-sans
       padding-top: 60px
+      @include respond-to(600)
+        padding-top: 0
     .post-title
       font-weight: 700
       font-style: normal
       letter-spacing: -0.04em
-      font-size: 40px
+      font-size: 50px
       line-height: 1.1
       color: #333332
       margin-bottom: 16px
+      @include respond-to(600)
+        font-size: 40px
     .author-image
       display: inline-block
       width: 30px
@@ -366,8 +370,11 @@ body
     p
       font-weight: 400
       font-style: normal
-      font-size: 20px
-      line-height: 28px
+      font-size: 22px
+      line-height: 30px
+      @include respond-to(600)
+        font-size: 20px
+        line-height: 28px
       margin: 0
       padding-bottom: 30px
       color: #333
