Decrease content padding for smaller screens

--- a/css/main.sass
+++ b/css/main.sass
@@ -134,6 +134,8 @@ body
   @include box-sizing(border-box)
   @include respond-to(800)
     padding: 0 $rs*2
+  @include respond-to(600)
+    padding: 0 28px
   article
     padding: 40px 0
     border-bottom: 1px solid #f2f2f0
