--- a/css/main.sass
+++ b/css/main.sass
@@ -135,7 +135,7 @@ body
   @include respond-to(800)
     padding: 0 $rs*2
   @include respond-to(600)
-    padding: 0 28px
+    padding: 0 20px
   article
     padding: 40px 0
     border-bottom: 1px solid #f2f2f0
@@ -380,9 +380,9 @@ body
       margin: 0
       padding-bottom: 30px
       color: #333
-      -webkit-hyphens: auto
-      -moz-hyphens: auto
-      hyphens: auto
+      // -webkit-hyphens: auto
+      // -moz-hyphens: auto
+      // hyphens: auto
     a
       color: #333
       text-decoration: underline
