Added testimonials page

--- a/css/main.sass
+++ b/css/main.sass
@@ -9,6 +9,7 @@
   @include clearfix
 
 $rs: 16px
+$mobile_breakpoint: 600
 
 $font-serif: Linux Libertine
 $font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
@@ -129,12 +130,12 @@ body
 
 .content
   width: 100%
-  max-width: 640px
+  max-width: 900px
   margin: 0 auto
   @include box-sizing(border-box)
   @include respond-to(800)
     padding: 0 $rs*2
-  @include respond-to(600)
+  @include respond-to($mobile_breakpoint)
     padding: 0 20px
   article
     padding: 40px 0
@@ -311,7 +312,7 @@ body
     .post-meta
       font-family: $font-sans
       padding-top: 60px
-      @include respond-to(600)
+      @include respond-to($mobile_breakpoint)
         padding-top: 0
     .post-title
       font-weight: 700
@@ -321,7 +322,7 @@ body
       line-height: 1.1
       color: #333332
       margin-bottom: 16px
-      @include respond-to(600)
+      @include respond-to($mobile_breakpoint)
         font-size: 40px
     .author-image
       display: inline-block
@@ -350,6 +351,13 @@ body
     width: 100%
     font-family: $font-serif
     color: #333
+    .testimonial-snippet
+      display: none
+    @include respond-to($mobile_breakpoint)
+      .testimonial-content
+        display: none
+      .testimonial-snippet
+        display: block
     h1, h2, h3
       font-family: $font-sans
     h3, h4, h5, h6
@@ -374,7 +382,7 @@ body
       font-style: normal
       font-size: 22px
       line-height: 30px
-      @include respond-to(600)
+      @include respond-to($mobile_breakpoint)
         font-size: 20px
         line-height: 28px
       margin: 0
