--- a/css/main.sass
+++ b/css/main.sass
@@ -119,8 +119,8 @@ body
     color: #666
     text-align: center
     font-weight: 400
-  .custom-links
-    margin: 0 0 50px
+  .navigation-links, .social-links
+    margin: 0 0 30px
     text-align: center
     color: #ccc
     a
@@ -128,6 +128,12 @@ body
       color: #999
       &:hover
         color: #333
+  @include respond-to($mobile_breakpoint)
+    .navigation-links
+      a.navigation-link
+        display: block
+      .link-divider
+        display: none
 
 .content
   width: 100%
@@ -593,7 +599,7 @@ body
       text-align: center
       font-weight: 400
       text-shadow: 0px 1px 16px rgba(0,0,0,0.5), 0px 0px 1px rgba(0,0,0,0.5)
-    .custom-links
+    .navigation-links, .social-links
       margin: 0 0 50px
 
 #disqus_thread
