More nav-link top/bottom padding

--- a/css/main.sass
+++ b/css/main.sass
@@ -132,6 +132,7 @@ body
     .navigation-links
       a.navigation-link
         display: block
+        padding: 7px 0
       .link-divider
         display: none
 
