--- a/css/main.sass
+++ b/css/main.sass
@@ -637,6 +637,7 @@ pre
   .contact-form
     padding-bottom: 50px
     label, input, textarea
+      -webkit-appearance: none
       display: block
       width: 100%
       max-width: 600px
@@ -649,7 +650,8 @@ pre
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6)
       color: rgba(96, 94, 94, 1)
       margin-top: 5px
-      padding: 10px
+      padding-top: 10px
+      padding-bottom: 10px
       font-size: 16px
     textarea
       height: 130px
