--- a/css/main.sass
+++ b/css/main.sass
@@ -641,6 +641,7 @@ pre
       display: block
       width: 100%
       max-width: 600px
+      padding: 10px 0 0
     label
       padding: 5px 0
       font-size: $rs*1.2
@@ -650,12 +651,9 @@ pre
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6)
       color: rgba(96, 94, 94, 1)
       margin-top: 5px
-      padding-top: 10px
-      padding-bottom: 10px
       font-size: 16px
     textarea
       height: 130px
-      margin: 2px 0 17px
       resize: none
     button
       border: none
