--- a/css/main.sass
+++ b/css/main.sass
@@ -641,7 +641,7 @@ pre
       display: block
       width: 100%
       max-width: 600px
-      padding: 10px 0 0
+      padding: 10px 0
     label
       padding: 5px 0
       font-size: $rs*1.2
