More padding/margin tweaks for contact page

--- a/css/main.sass
+++ b/css/main.sass
@@ -641,7 +641,7 @@ pre
       display: block
       width: 100%
       max-width: 600px
-      padding: 10px 0
+      padding: 10px 0 10px 5px
     label
       padding: 5px 0
       font-size: $rs*1.2
@@ -657,3 +657,4 @@ pre
       resize: none
     button
       border: none
+      margin-top: 20px
