--- a/css/main.sass
+++ b/css/main.sass
@@ -658,3 +658,9 @@ pre
     button
       border: none
       margin-top: 20px
+
+.main-quote
+  font-size: $rs*1.2
+  font-style: italic
+.quote-author
+  font-style: normal
