--- a/css/main.sass
+++ b/css/main.sass
@@ -664,3 +664,7 @@ pre
   font-style: italic
 .quote-author
   font-style: normal
+  text-align: right
+  display: block
+  font-size: $rs
+  padding-top: 5px
