--- a/css/main.sass
+++ b/css/main.sass
@@ -2,8 +2,8 @@
 ---
 
 @import 'syntax-highlighting'
-
 @import 'bourbon/bourbon'
+@import 'neat/neat'
 
 .cf
   @include clearfix
@@ -150,7 +150,7 @@ body
     border-bottom: 1px solid #f2f2f0
     &:last-child
       border-bottom: 0px
-    .post-title
+    .post-title, .post-subtitle
       letter-spacing: -0.02em
       font-weight: 700
       font-style: normal
@@ -170,6 +170,14 @@ body
       font-size: 20px
       line-height: 1.3
       color: #666665
+      a
+        text-decoration: none
+        color: #333332
+        &:hover
+          text-decoration: none
+    .post-read-more
+      margin-bottom: 20px
+      display: block
     .post-meta
       font-size: 14px
       color: #b3b3b1
@@ -208,24 +216,6 @@ body
     text-decoration: none
     &:hover
       color: #333
-
-.post-reading
-  position: absolute
-  top: 10px
-  right: 30px
-  line-height: 44px
-  display: inline-block
-  white-space: nowrap
-  color: rgba(0,0,0,0.25)
-  font-size: 14px
-  letter-spacing: -0.02em
-  font-weight: 400
-  font-style: normal
-  font-family: $font-sans
-  z-index: 999
-.tag-articleimage .post-reading
-  color: rgba(255,255,255,0.9)
-  text-shadow: 0px 1px 4px rgba(0,0,0,0.25), 0px 0px 1px rgba(0,0,0,0.5)
 
 .site-footer
   margin: 0 auto
@@ -271,7 +261,7 @@ body
       @include respond-to($max_width + 100)
         left: $rs
         right: $rs
-    .post-title
+    .post-title, .post-subtitle
       font-weight: 700
       font-style: normal
       letter-spacing: -0.04em
@@ -322,7 +312,7 @@ body
       padding-top: 60px
       @include respond-to($mobile_breakpoint)
         padding-top: 0
-    .post-title
+    .post-title, .post-subtitle
       font-weight: 700
       font-style: normal
       letter-spacing: -0.04em
@@ -331,7 +321,11 @@ body
       color: #333332
       margin-bottom: 16px
       @include respond-to($mobile_breakpoint)
-        font-size: 40px
+        font-size: 35px
+    .post-subtitle
+      font-size: 40px
+      @include respond-to($mobile_breakpoint)
+        font-size: 30px
     .author-image
       display: inline-block
       width: 30px
@@ -668,3 +662,21 @@ pre
   display: block
   font-size: $rs
   padding-top: 5px
+
+.success-stories
+  .photos-container
+    @include outer-container
+    margin-top: 15px
+    margin-bottom: 25px
+  .photo-container
+    @include span-columns(6)
+    text-align: center
+  .photo-title
+    margin-top: 5px
+    margin-bottom: 5px
+    display: inline-block
+    font-weight: bold
+    font-size: $rs*1.4
+  .photo
+    display: block
+    max-height: 480px
