--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -46,3 +46,20 @@ ga('create', 'UA-59495149-1', 'auto');
 ga('send', 'pageview');
 </script>
 
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1714869315409187',
+      xfbml      : true,
+      version    : 'v2.4'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
