--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,14 @@
           {{content}}
         </section>
         <footer class="post-footer">
+          <div class="fb-like" 
+               data-href="{{ site.url }}{{ page.url }}"
+               data-layout="button_count" 
+               data-action="like" 
+               data-show-faces="false" 
+               data-share="true">
+          </div>
+
           <section class="share">
             {% for social in site.social %}
               {% if social.share_url != null %}
