--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,4 +62,5 @@
     <meta content="{{ tag }}" property="article:tag">
     {% endfor %}
   {% endif %}
+  <meta content="{{ site.fb_app_id }}" property="fb:app_id">
 </head>
