Use figure/figcaption tags for photos

--- a/css/main.sass
+++ b/css/main.sass
@@ -671,12 +671,13 @@ pre
   .photo-container
     @include span-columns(6)
     text-align: center
-  .photo-title
-    margin-top: 5px
-    margin-bottom: 5px
-    display: inline-block
-    font-weight: bold
-    font-size: $rs*1.4
+    .photo-title
+      margin-top: 5px
+      margin-bottom: 5px
+      display: inline-block
+      font-weight: bold
+      font-size: $rs*1.4
+      font-style: normal
   .photo
     display: block
     max-height: 480px
